2009-03-10  John W. Eaton  <jwe@octave.org>

	* Array.h, ArrayN.h, Bounds.h, CmplxAEPBAL.h, CmplxCHOL.h,
	CmplxGEPBAL.h, CmplxHESS.h, CmplxQR.h, CmplxQRP.h, CmplxSCHUR.h,
	CmplxSVD.h, CollocWt.h, EIG.h, FEGrid.h, LinConst.h, Range.h,
	Sparse.h, SparseCmplxQR.h, SparseQR.h, dbleAEPBAL.h, dbleCHOL.h,
	dbleGEPBAL.h, dbleHESS.h, dbleQR.h, dbleQRP.h, dbleSCHUR.h,
	dbleSVD.h, dim-vector.h, fCmplxAEPBAL.h, fCmplxCHOL.h,
	fCmplxGEPBAL.h, fCmplxHESS.h, fCmplxQR.h, fCmplxQRP.h,
	fCmplxSCHUR.h, fCmplxSVD.h, fEIG.h, floatAEPBAL.h, floatCHOL.h,
	floatGEPBAL.h, floatHESS.h, floatQR.h, floatQRP.h, floatSCHUR.h,
	floatSVD.h, idx-vector.h, lo-utils.h, oct-inttypes.h,
	oct-spparms.h, str-vec.h: Include <iosfwd> instead of <iosstream>.

2009-03-10  Jaroslav Hajek  <highegg@gmail.com>

	* mx-inlines.cc (OP_CUMMINMAX_FCN2): r -> r0 where appropriate.

2009-03-08  Jaroslav Hajek  <highegg@gmail.com>

	* idx-vector.h (idx_vector::bloop): loop --> bloop.
	(idx_vector::loop): New method.
	* MArray.cc (MArray<T>::idx_add (cons idx_vector&, T))
	(MArray<T>::idx_add (cons idx_vector&, const MArray<T>&)): New methods.
	* MArray.h: Declare them.

2009-03-05  Jason Riedy  <jason@acm.org>

	* Sparse.h (Sparse<T>::elt_type): Remove typedef, replace with:
	* Sparse.h (Sparse<T>::element_type): Add typedef to be consistent
	with Array.h
	* DiagArray2.h (DiagArray2<T>::elt_type): Likewise, removed.
	* DiagArray2.h (DiagArray2<T>::element_type): Define by using
	Array<T>::element_type.
	* intNDArray.h (intNDArray<T>::element_type): Remove, inherited
	from MArrayN<T>.

2009-03-05  Jaroslav Hajek  <highegg@gmail.com>

	* dSparse.h (SparseMatrix::SparseMatrix(const PermMatrix&)): New
	constructor.
	(SparseMatrix::SparseMatrix(const DiagMatrix&)): Fix implementation.
	* CSparse.h (SparseComplexMatrix::SparseComplexMatrix(const ComplexDiagMatrix&)): 
	Fix implementation.

2009-03-04  Jaroslav Hajek  <highegg@gmail.com>

	* PermMatrix.h (PermMatrix::elem): Fix comparisons.
